[gd_scene load_steps=5 format=3 uid="uid://cy168swpr8vvn"]

[ext_resource type="Script" path="res://frame_exporter.gd" id="1_frame_exporter"]
[ext_resource type="Script" path="res://input_receiver.gd" id="2_input_receiver"]
[ext_resource type="Script" path="res://plugin_ui.gd" id="3_plugin_ui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.12, 0.12, 0.15, 1)

[node name="Main" type="Node"]

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = true
size = Vector2i(600, 400)
render_target_update_mode = 4

[node name="PluginUI" type="Control" parent="SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_plugin_ui")

[node name="Background" type="ColorRect" parent="SubViewport/PluginUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.12, 0.15, 1)

[node name="Title" type="Label" parent="SubViewport/PluginUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
text = "FatSat"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FatnessLabel" type="Label" parent="SubViewport/PluginUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 280.0
offset_right = 100.0
offset_bottom = 310.0
grow_horizontal = 2
text = "FATNESS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FatnessKnob" type="Panel" parent="SubViewport/PluginUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="KnobIndicator" type="ColorRect" parent="SubViewport/PluginUI/FatnessKnob"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -4.0
offset_top = 10.0
offset_right = 4.0
offset_bottom = 40.0
grow_horizontal = 2
color = Color(0.9, 0.5, 0.1, 1)

[node name="ValueLabel" type="Label" parent="SubViewport/PluginUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 310.0
offset_right = 50.0
offset_bottom = 340.0
grow_horizontal = 2
text = "0%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MeterLeft" type="ColorRect" parent="SubViewport/PluginUI"]
layout_mode = 1
offset_left = 40.0
offset_top = 80.0
offset_right = 60.0
offset_bottom = 320.0
color = Color(0.2, 0.8, 0.3, 1)

[node name="MeterRight" type="ColorRect" parent="SubViewport/PluginUI"]
layout_mode = 1
offset_left = 540.0
offset_top = 80.0
offset_right = 560.0
offset_bottom = 320.0
color = Color(0.2, 0.8, 0.3, 1)

[node name="FrameExporter" type="Node" parent="."]
script = ExtResource("1_frame_exporter")

[node name="InputReceiver" type="Node" parent="."]
script = ExtResource("2_input_receiver")
